<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.enricoweinhold.bostonterrierquiz.MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bild1"
                android:scaleType="fitStart" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:text="@string/qh1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questions"
                android:text="@string/q1"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/answers"
                >
                <RadioButton
                    android:id="@+id/radio1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_1_1"/>
                <RadioButton
                    android:id="@+id/radio1_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_1_2"/>
                <RadioButton
                    android:id="@+id/radio1_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_1_3"/>
            </RadioGroup>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bild2"
                android:scaleType="fitStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:text="@string/qh2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questions"
                android:text="@string/q2"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answers">
                <RadioButton
                    android:id="@+id/radio2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_2_1"/>
                <RadioButton
                    android:id="@+id/radio2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_2_2"/>
                <RadioButton
                    android:id="@+id/radio2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_2_3"/>
            </RadioGroup>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bild3"
                android:scaleType="fitStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:text="@string/qh3"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questions"
                android:text="@string/q3"/>

            <CheckBox
                android:id="@+id/check3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/ans_3_1"/>
            <CheckBox
                android:id="@+id/check3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/ans_3_2"/>
            <CheckBox
                android:id="@+id/check3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:text="@string/ans_3_3"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bild4"
                android:scaleType="fitStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:text="@string/qh4"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questions"
                android:text="@string/q4"/>
            <EditText
                android:id="@+id/edittext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:hint="@string/hint_q4"
                android:inputType="number"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bild5"
                android:scaleType="fitStart"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/header"
                android:text="@string/qh5"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/questions"
                android:text="@string/q5"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/answers">
                <RadioButton
                    android:id="@+id/radio5_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_5_1"/>
                <RadioButton
                    android:id="@+id/radio5_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_5_2"/>
                <RadioButton
                    android:id="@+id/radio5_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ans_5_3"/>
            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_check_answers"
                android:onClick="checkAnswers"
                style="@style/answers"/>

        </LinearLayout>

</ScrollView>
